[metadata]
name = neutron-roth-agent
version = 0.0.3
author = Anthony Timmins
author_email = atimmins@datto.com
description = Neutron agent for routing on the host
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/datto/neutron-roth-agent
project_urls =
    Bug Tracker = https://github.com/datto/neutron-roth-agent/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[bdist_wheel]
universal=1

[options]
include_package_data = True

[options.entry_points]
console_scripts =
    neutron_roth_agent = neutron_roth_agent:main
